# routa

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  api-contract.yaml  package-lock.json  package.json  skills-lock.json  tsconfig.json  vitest.setup.ts
.claude/: settings.local.json
.codex/: hooks.json
.husky/: post-commit  pre-commit  pre-push
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/examples/: standalone_server.rs
apps/desktop/src-tauri/src/: lib.rs  tray.rs
architecture/: quantums.yaml
crates/agentwatch/: Cargo.toml  README.md
crates/agentwatch/scripts/: install-hooks.sh
crates/agentwatch/src/: detect.rs  ipc.rs  main.rs  models.rs  repo.rs  state.rs  tui.rs  tui_cache.rs  tui_highlight.rs  tui_render.rs  tui_tests.rs
crates/agentwatch/src/snapshots/: agentwatch__tui__tests__agentwatch_tui_file_preview.snap  agentwatch__tui__tests__agentwatch_tui_search.snap  agentwatch__tui__tests__agentwatch_tui_summary.snap
crates/agentwatch/templates/: codex-hooks.json
crates/agentwatch/templates/git-hooks/: post-checkout  post-commit  post-merge
crates/entrix/: Cargo.toml
crates/entrix/src/: cli_output.rs  file_budgets.rs  lib.rs  long_file.rs  main.rs  model.rs  review_trigger.rs  run_support.rs  runner.rs  sarif.rs  scoring.rs  server.rs  terminal.rs  test_mapping.rs
crates/entrix/src/review_context/: tests.rs
crates/entrix/src/review_context/tree_sitter/: graph_builder.rs  mod.rs
crates/entrix/src/test_mapping/: tests.rs
crates/harness-monitor/: Cargo.toml
crates/harness-monitor/src/: feature_trace.rs  main.rs  repo.rs  state.rs  tui.rs  tui_cache.rs  tui_cache_test_mapping.rs  tui_panels.rs  tui_render.rs  tui_tests.rs
crates/harness-monitor/src/evaluate/: entrix.rs
crates/harness-monitor/src/govern/: evidence.rs
crates/harness-monitor/src/observe/: codex_transcript.rs  hooks.rs  ipc.rs  mod.rs  observe.rs
crates/harness-monitor/src/run/: orchestrator.rs  policy.rs
crates/harness-monitor/src/shared/: db.rs  models.rs
crates/harness-monitor/src/snapshots/: harness_monitor__tui__tests__routa_watch_tui_compact.snap  harness_monitor__tui__tests__routa_watch_tui_file_preview.snap  harness_monitor__tui__tests__routa_watch_tui_full_runs.snap  harness_monitor__tui__tests__routa_watch_tui_search.snap  harness_monitor__tui__tests__routa_watch_tui_summary.snap
crates/harness-monitor/src/ui/: cache.rs  cache_git_history.rs  cache_history.rs  cache_test_mapping.rs  cache_tests.rs  panels.rs  render.rs  render_tests.rs  run_details.rs  state.rs  state_events.rs  tests.rs  tui.rs  views.rs
crates/harness-monitor/src/ui/snapshots/: harness_monitor__ui__tui__tests__routa_watch_tui_compact.snap  harness_monitor__ui__tui__tests__routa_watch_tui_file_preview.snap  harness_monitor__ui__tui__tests__routa_watch_tui_full_runs.snap  harness_monitor__ui__tui__tests__routa_watch_tui_run_details_decision_first.snap  harness_monitor__ui__tui__tests__routa_watch_tui_search.snap  harness_monitor__ui__tui__tests__routa_watch_tui_summary.snap
crates/routa-cli/: Cargo.toml  README.md
crates/routa-cli/src/: kanban_cli.rs  main.rs
crates/routa-cli/src/commands/: agent.rs  chat.rs  feature_tree.rs  fitness.rs  harness.rs  harness_budget.rs  kanban.rs  mod.rs  prompt.rs  review.rs  scan.rs  specialist.rs  team.rs  tui.rs
crates/routa-cli/src/commands/agent/: ui_journey.rs  ui_journey_provider.rs
crates/routa-cli/src/commands/fitness/: arch_dsl.rs
crates/routa-cli/src/commands/fitness/fluency/: engine.rs  evidence_pack.rs  mod.rs  report.rs  tests.rs  types.rs
crates/routa-cli/src/commands/graph/: analyze.rs  mod.rs
crates/routa-cli/src/commands/harness/engineering/: tests_learning.rs  types.rs
crates/routa-cli/src/commands/review/: candidate_collector.rs  dispatch.rs  legacy.rs  mod.rs  security.rs  shared.rs
crates/routa-core/: Cargo.toml
crates/routa-core/src/: codeowners.rs  git.rs  harness_automation.rs  harness_template.rs  lib.rs  shell_env.rs  spec_detector.rs
crates/routa-core/src/acp/: claude_code_process.rs  mcp_setup.rs  mod.rs  process.rs
crates/routa-core/src/acp/docker/: process_manager.rs
crates/routa-core/src/db/: mod.rs
crates/routa-core/src/models/: canvas_generation_contract.rs  codebase.rs  kanban.rs  kanban_config.rs  mod.rs  task.rs
crates/routa-core/src/orchestration/: mod.rs
crates/routa-core/src/rpc/methods/: kanban.rs  tasks.rs
crates/routa-core/src/rpc/methods/kanban/: automation.rs  boards.rs  cards.rs
crates/routa-core/src/rpc/methods/kanban/automation/: a2a.rs
crates/routa-core/src/storage/: folder_slug.rs  jsonl_writer.rs  local_session_provider.rs  mod.rs
crates/routa-core/src/store/: codebase_store.rs  kanban_store.rs  task_store.rs
crates/routa-core/src/tools/: mod.rs
crates/routa-core/src/trace/: vcs.rs
crates/routa-core/src/workflow/: specialist.rs
crates/routa-rpc/: Cargo.toml
crates/routa-scanner/: Cargo.toml
crates/routa-scanner/src/: lib.rs
crates/routa-server/: Cargo.toml
crates/routa-server/src/: feature_tree.rs  lib.rs
crates/routa-server/src/api/: acp_routes.rs  canvas.rs  clone.rs  codebases.rs  feature_explorer.rs  files.rs  fitness.rs  git.rs  harness.rs  harness_github_actions.rs  harness_repo_views.rs  harness_templates.rs  kanban.rs  mcp_routes.rs  mod.rs  polling.rs  repo_context.rs  review.rs  sandbox.rs  sessions.rs  skills.rs  specialists.rs  tasks.rs  tasks_automation.rs  traces.rs  worktrees.rs
crates/routa-server/src/api/kanban/: board_meta.rs
crates/routa-server/src/api/mcp_routes/: rmcp_service.rs  tool_catalog.rs
crates/routa-server/src/api/mcp_routes/tool_executor/: agents_tasks.rs
crates/routa-server/src/application/: sessions.rs  tasks.rs
crates/routa-server/tests/: rust_api_end_to_end.rs  rust_api_git_read_routes.rs  rust_api_mcp_routes.rs  rust_api_task_artifacts.rs
docker/: Dockerfile.opencode-agent
docs/: ARCHITECTURE.md  ARCHITECTURE_QUALITY_GUIDE.md  REFACTOR.md  RELEASE_CHECKLIST.md  RELEASE_SETUP.md  quickstart.md  release-guide.md
e2e/: ag-ui-protocol.spec.ts  (+3 more)
src/app/: page.tsx  (+1 more)
(+780 files in other folders)
