[workspace]
resolver = "2"
members = [
    "crates/feature-trace",
    "crates/routa-core",
    "crates/routa-server",
    "crates/routa-cli",
    "crates/routa-rpc",
    "crates/routa-scanner",
    "crates/trace-parser",
    "crates/entrix",
    "apps/desktop/src-tauri",
    "crates/harness-monitor",
]

[workspace.package]
version = "0.18.0"
edition = "2021"
license = "MIT"
authors = ["phodal"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
