[package]
name = "agentwatch"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
description = "Local agent file attribution tool for multi-agent coding sessions"

[[bin]]
name = "agentwatch"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
syntect = "5"
