[package]
name = "entrix"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Entrix fitness function engine — Rust implementation of tools/entrix"
repository = "https://github.com/phodal/routa-js"
homepage = "https://github.com/phodal/routa-js"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
hex = "0.4"
rmcp = { version = "0.15", features = ["server", "transport-io", "schemars"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "process"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"

[dev-dependencies]
tempfile = "3"
