[package]
name = "harness-monitor"
version = "0.14.3"
edition = "2021"
license.workspace = true
authors.workspace = true
description = "Routa Harness Monitor - multi-agent control plane with task/run/workspace/evidence domain model, policy evaluation, and real-time TUI"
repository = "https://github.com/phodal/routa-js"
homepage = "https://github.com/phodal/routa-js"

[[bin]]
name = "harness-monitor"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
ratatui = "0.29"
entrix = { version = "0.14.3", path = "../routa-entrix" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
glob = "0.3"
serde_yaml = "0.9"
sha2 = "0.11"
syntect = "5"
sysinfo = "0.32"

[dev-dependencies]
insta = "1"
pretty_assertions = "1"
tempfile = "3"
