[package]
name = "routa-rpc"
version = "0.18.0"
description = "Transport-agnostic JSON-RPC 2.0 layer for Routa.js — enables JS bindgen"
authors = ["phodal"]
edition = "2021"
license = "MIT"
repository = "https://github.com/phodal/routa-js"
homepage = "https://github.com/phodal/routa-js"

[lib]
name = "routa_rpc"
path = "src/lib.rs"

[dependencies]
# Core domain only — no HTTP framework needed
routa-core = { version = "0.18.0", path = "../routa-core" }
