[package]
name = "routa-scanner"
version = "0.2.4"
edition = "2021"
license = "MIT"
description = "Reusable multi-tool security and quality scanning module for Routa"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
which = "6"
