[package]
name = "routa-server"
version = "0.18.0"
description = "Routa.js HTTP Server — axum adapter on top of routa-core"
authors = ["phodal"]
edition = "2021"
license = "MIT"
repository = "https://github.com/phodal/routa-js"
homepage = "https://github.com/phodal/routa-js"

[lib]
name = "routa_server"
path = "src/lib.rs"

[dependencies]
# Core domain (with axum IntoResponse support)
routa-core = { version = "0.18.0", path = "../routa-core", features = ["axum"] }

# Feature trace & session analysis
feature-trace = { path = "../feature-trace" }
trace-parser = { path = "../trace-parser" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Async runtime (re-used from routa-core, but needed for server bootstrap)
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"

# Serialization (re-used from routa-core, needed in API handlers)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# YAML parsing (workflow CRUD)
serde_yaml = "0.9"

# Utilities used in API handlers
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "0.15", features = ["server", "transport-streamable-http-server"] }

# HTTP client (used directly in some API handlers)
reqwest = { version = "0.12", features = ["json", "stream"] }
regex = "1"

# Archive extraction (for skill catalog install)
zip = "2"
tempfile = "3"

# Home directory
dirs = "6"

# URL encoding
urlencoding = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System information
sysinfo = "0.32"
notify-rust = "4.12.0"
lazy_static = "1.5.0"
sha2 = "0.10"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
