[package]
name = "routa-desktop"
version = "0.12.1"
description = "Routa.js Desktop - Multi-agent coordination platform"
authors = ["phodal"]
edition = "2021"

[lib]
name = "routa_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri plugins
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-opener = "2"

# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

# PTY support for interactive terminals
portable-pty = "0.9"

# Routa Server (extracted crate)
routa-server = { path = "../../../crates/routa-server" }

# Async runtime (needed for Tauri integration)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
axum = "0.8.8"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors"] }
